--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
+    {% seo %}
   </head>
   <body>
     <div class="wrapper">
