--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
 
+    {% include head.html %}
     {% seo %}
-
   </head>
   <body>
     <div class="wrapper">
