--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
-    
+   <meta name="google-site-verification" content="9o5s8UWGkZxoGnsdwF3AuurFFuAdZ2e3ullbDNeEZLg" /> 
   </head>
   <body>
     <div class="wrapper">
